fixed list spacing in markdown output

--- a/modules/server/custom_widgets.css
+++ b/modules/server/custom_widgets.css
@@ -20,6 +20,11 @@ div.div-container div.CustomTextOutput td {
   border-collapse: collapse;
 }
 
+div.div-container div.CustomTextOutput ul ,
+div.div-container div.CustomTextOutput ol {
+  display: grid
+}
+
 div.div-container textarea.CustomTextarea::selection {
   /*color: gold;	*/
   background-color: gray;
